welcome.lessons.welcome.bdr.BDR.scala.error
BDRBuggle:1: error: ';' expected but 'var' found.
}var fin =false
 ^